# Tsinghua-Tools

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
cloud-downloader/: README.md  index.html  package-lock.json  package.json
cloud-downloader-legacy/: check_list_gui.py  cloud_download.py  cloud_download_v2.py  progress.md
cloud-downloader/src/: App.css  App.tsx  index.css
cloud-downloader/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
cloud-downloader/src-tauri/capabilities/: default.json
cloud-downloader/src-tauri/icons/: icon.icns
cloud-downloader/src-tauri/src/: lib.rs  main.rs
cloud_download_gui/: SharedDirectory.py  check_list_gui.py  cloud_download.py  cloud_download.spec  cloud_download_v2.py  cloud_download_v2.spec  progress.md  util.py
