[package]
name = "cloud_download_tauri"
version = "0.1.0"
description = "Seafile share link downloader"
authors = ["you"]
edition = "2021"

[lib]
name = "cloud_download_tauri"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["wry"] }
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1.36", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "cookies"] }
futures-util = "0.3"
urlencoding = "2.1"
